Final precedent update

--- a/index.html
+++ b/index.html
@@ -100,6 +100,39 @@
 
   <div class="container one-bottom">
     <div class="eight columns">
+      <h5>A Living Door of the Museum</h5>
+      <p>Marina Abramavid & Uwe Laysiepen, 1977. A pair of naked actors stand facing each other in a doorway, forcing peopole to move between them to enter a space</p>
+    </div>
+
+    <div class="four columns">
+      <a href="https://news.artnet.com/art-world/marina-abramovics-naked-doorway-coming-royal-academy-london-1642153"><img class="scale-with-grid" src="img/living_doorway.jpg"></a>
+    </div>
+  </div>
+
+  <div class="container one-bottom">
+    <div class="eight columns">
+      <h5>Ant Farm</h5>
+      <p>Jesse Seegers, 2016. An inflatable expanding into a existing hard architecture. Occupiable Inflatable</p>
+    </div>
+
+    <div class="four columns">
+      <a href="https://jesseseegers.com/Ant-Farm-at-Pioneer-Works"><img class="scale-with-grid" src="img/ant_farm.jpg"></a>
+    </div>
+  </div>
+
+  <div class="container one-bottom">
+    <div class="eight columns">
+      <h5>Snowballing Doorway</h5>
+      <p>Alex Schweder, 2008. An flexible soft architecture, shifting from an occupiable archway to the inverse, blocking the pathway</p>
+    </div>
+
+    <div class="four columns">
+      <a href="http://www.alexschweder.com/snowballing-doorway/"><img class="scale-with-grid" src="img/SnowBalling-Doorway.jpg"></a>
+    </div>
+  </div>
+
+  <div class="container one-bottom">
+    <div class="eight columns">
       <h5>FLOATING MACHINE</h5>
       <p align="justify">Yi's project investigates the ideas of ecological complex ecosystems with artifical intelligence. The exhibition space is coded with scents of different times and spaces. These two independant variables collaboate week to week creating an ever changing expereince for both the user and inflatables. Primary blend of techology and biology. </p>
     </div>
